--- a/src/App.css
+++ b/src/App.css
@@ -1,289 +1,379 @@
 @import "./styles/variables.css";
 
 @font-face {
-  font-family: "full";
-  src: url(./assets/fonts/MADE\ TOMMY\ Black_PERSONAL\ USE.otf);
+      font-family: "full";
+      src: url(./assets/fonts/MADE\ TOMMY\ Black_PERSONAL\ USE.otf);
 }
 @font-face {
-  font-family: "outlined";
-  src: url(./assets/fonts/MADE\ TOMMY\ Black\ Outline_PERSONAL\ USE.otf);
+      font-family: "outlined";
+      src: url(./assets/fonts/MADE\ TOMMY\ Black\ Outline_PERSONAL\ USE.otf);
+}
+
+* {
+      scroll-behavior: smooth;
 }
 
 .App-header {
-  /* background: var(--background); */
-  background: url(./assets/studio.jpg) no-repeat center/cover;
-  background-attachment: fixed;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: var(--white);
+      background: url(./assets/studio.jpg) no-repeat center/cover;
+      background-attachment: fixed;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: var(--white);
 }
 h1 {
-  font-family: "outlined";
-  font-size: 6vw;
+      font-family: "outlined";
+      font-size: 6vw;
 }
 h1 span {
-  font-family: "full";
-  color: var(--blue);
+      font-family: "full";
+      color: var(--blue);
 }
 
-/* custom cursor */
+/* Navigation style */
 
-#customCursor {
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  background-color: white;
-  position: fixed;
-  pointer-events: none;
-  top: 0;
-  mix-blend-mode: exclusion;
-  opacity: 0;
-  z-index: 2;
-  transition: transform 0.5s;
+.nav-toggler {
+      position: fixed;
+      z-index: 20;
+      top: 3%;
+      right: 3%;
+      height: 50px;
+      width: 35px;
+      border: none;
+      outline: none;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: transparent;
 }
-#customCursor::after {
-  content: "";
-  border-radius: 50%;
-  position: absolute;
-  top: -8px;
-  left: -8px;
-  border: 1px solid var(--white);
-  background: var(--white);
-  width: 20px;
-  height: 20px;
+.line {
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 2px;
+      border-radius: 50px;
+      background: transparent;
+      backdrop-filter: invert(1);
+      transition: transform 0.3s ease-out, opacity 0.1s ease-out;
 }
-a:hover #customCursor {
-  transform: scale(3);
+.l1 {
+      transform: translateY(-10px);
+}
+.l3 {
+      transform: translateY(10px);
+}
+.nav-toggler.toggle {
+      position: fixed;
+}
+.nav-toggler.toggle .l1 {
+      transform: translateY(0) rotate(135deg);
+}
+.nav-toggler.toggle .l2 {
+      opacity: 0;
+}
+.nav-toggler.toggle .l3 {
+      transform: translateY(0) rotate(-135deg);
+}
+
+#navigation {
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      margin-top: -100vh;
+      transition: 0.6s;
+      background: var(--background);
+      z-index: 5;
+
+      padding: 0;
+}
+#navigation nav {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+
+      margin: 0;
+      padding: 0;
+}
+#navigation nav ul {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-flow: column nowrap;
+
+      margin: 0;
+      padding: 0;
+}
+#navigation nav ul li {
+      height: 100%;
+      width: 100%;
+      list-style-type: none;
+      transition: 0.4s;
+      display: flex;
+      align-items: center;
+
+      background: linear-gradient(-135deg, var(--white) 50%, #fff 0)
+                  var(--_d, 100%) / 250% no-repeat,
+            linear-gradient(-135deg, #0000 50%, var(--white) 0) var(--_d, 100%) /
+                  250% no-repeat;
+      -webkit-background-clip: text, padding-box;
+      background-clip: text, padding-box;
+      transition: 0.5s;
+
+      margin: 0;
+      padding: 0 1em;
+}
+#navigation a {
+      font-family: "outlined";
+      color: var(--white);
+      width: 100%;
+      height: 100%;
+      font-size: 2.5em;
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      transition: 0.4s;
+
+      margin: 0;
+      padding: 0;
+}
+#navigation li:hover {
+      cursor: pointer;
+      --_d: 50%;
+}
+#navigation li:hover a {
+      font-family: "full";
+      color: var(--background);
+}
+#navigation.active {
+      margin-top: 0;
 }
 
 /* Clips */
 
 #clips {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background: var(--white);
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      background: var(--white);
 }
 h2 {
-  position: sticky;
-  top: 0;
-  height: 3em;
-  display: flex;
-  align-items: center;
-  padding: 0 2%;
-  margin: 0;
-  font-family: "full";
-  text-transform: uppercase;
-  font-size: 3em;
-  color: var(--background);
-  background-color: var(--white);
+      position: sticky;
+      top: 0;
+      height: 3em;
+      display: flex;
+      align-items: center;
+      padding: 0 2%;
+      margin: 0;
+      font-family: "full";
+      text-transform: uppercase;
+      font-size: 3em;
+      color: var(--background);
+      background-color: var(--white);
 }
 iframe {
-  width: 50%;
-  height: 55vh;
-  margin: 5em auto;
-  border-radius: 25px;
-  border: none;
-  box-shadow: var(--shadow);
-  transition: 0.5s;
+      width: 50%;
+      height: 55vh;
+      margin: 5em auto;
+      border-radius: 25px;
+      border: none;
+      box-shadow: var(--shadow);
+      transition: 0.5s;
 }
 iframe:hover {
-  transform: scale(1.03);
+      transform: scale(1.03);
 }
 
 /* Stream */
 
 #stream {
-  margin: 2em 0;
-  height: 50vh;
-  display: flex;
-  align-items: center;
-  flex-flow: row wrap;
+      margin: 2em 0;
+      height: 50vh;
+      display: flex;
+      align-items: center;
+      flex-flow: row wrap;
 }
 #stream ul {
-  margin: 0 auto;
-  width: 75%;
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
+      margin: 0 auto;
+      width: 75%;
+      display: flex;
+      flex-flow: row wrap;
+      justify-content: center;
 }
 #stream ul li {
-  list-style-type: none;
-  height: 100px;
-  width: 200px;
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 10px;
-  margin: 20px;
-  border: 1px solid var(--white);
-  border-radius: 15px;
-  box-shadow: var(--shadow);
-  transition: 0.4s;
+      list-style-type: none;
+      height: 100px;
+      width: 200px;
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 10px;
+      margin: 20px;
+      border: 1px solid var(--white);
+      border-radius: 15px;
+      box-shadow: var(--shadow);
+      transition: 0.4s;
 }
 #stream img {
-  width: 60px;
+      width: 60px;
 }
 #stream a {
-  font-family: "Segoe UI";
-  color: var(--background);
-  font-size: 25px;
-  display: flex;
-  flex-flow: row;
-  align-items: center;
+      font-family: "Segoe UI";
+      color: var(--background);
+      font-size: 25px;
+      display: flex;
+      flex-flow: row;
+      align-items: center;
 }
 
 #stream li:nth-child(1):hover {
-  background-color: #1ed760;
-  border-color: #1ed760;
+      background-color: #1ed760;
+      border-color: #1ed760;
 }
 #stream li:nth-child(2):hover {
-  background-color: #e08813;
-  border-color: #e08813;
+      background-color: #e08813;
+      border-color: #e08813;
 }
 #stream li:nth-child(3):hover {
-  background-color: black;
+      background-color: black;
 }
 #stream li:nth-child(3):hover img {
-  filter: invert(1);
+      filter: invert(1);
 }
 #stream li:nth-child(4):hover {
-  background-color: #2596be;
-  border-color: #2596be;
+      background-color: #2596be;
+      border-color: #2596be;
 }
 #stream li:nth-child(5):hover {
-  background-color: #fc0404;
-  border-color: #fc0404;
+      background-color: #fc0404;
+      border-color: #fc0404;
 }
 #stream li:nth-child(1):hover a {
-  color: var(--white);
+      color: var(--white);
 }
 #stream li:nth-child(2):hover a {
-  color: var(--white);
+      color: var(--white);
 }
 #stream li:nth-child(3):hover a {
-  color: var(--white);
+      color: var(--white);
 }
 #stream li:nth-child(4):hover a {
-  color: var(--white);
+      color: var(--white);
 }
 #stream li:nth-child(5):hover a {
-  color: var(--white);
+      color: var(--white);
 }
 
 /* Shows */
 
 #show {
-  margin: 2em 0;
-  height: auto;
+      margin: 2em 0;
+      height: auto;
 }
 #show table {
-  margin: 0 auto;
-  border: 2px solid var(--background);
-  width: 75%;
-  height: auto;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 20px;
-  color: var(--background);
-  border-radius: 15px;
+      margin: 0 auto;
+      border: 2px solid var(--background);
+      width: 75%;
+      height: auto;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-size: 20px;
+      color: var(--background);
+      border-radius: 15px;
 }
 #show table th {
-  border-bottom: 2px solid var(--background);
-  height: 70px;
-  font-size: 25px;
+      border-bottom: 2px solid var(--background);
+      height: 70px;
+      font-size: 25px;
 }
 #show table tr td {
-  text-align: center;
-  height: 50px;
-  font-style: italic;
+      text-align: center;
+      height: 50px;
+      font-style: italic;
 }
 #show table a {
-  color: var(--background);
-  border-bottom: 1px solid var(--background);
+      color: var(--background);
+      border-bottom: 1px solid var(--background);
 }
 
 /* Shop */
 
 #shop {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-flow: row wrap;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      flex-flow: row wrap;
 }
 .item {
-  width: 25%;
-  height: auto;
-  text-align: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      width: 25%;
+      height: auto;
+      text-align: center;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .item img {
-  width: 500px;
-  transition: 0.5s;
+      width: 500px;
+      transition: 0.5s;
 }
 .item img:hover {
-  transform: scale(1.1);
+      transform: scale(1.1);
 }
+
 /* contact */
 
 #contact {
-  height: auto;
-  background: var(--background);
+      height: 25vh;
+      padding: 25px 0;
+      display: flex;
+      flex-direction: column;
+      background: var(--background);
 }
 #contact h2 {
-  background: var(--background);
-  color: var(--white);
+      background: var(--background);
+      color: var(--white);
 }
 #contact h3 {
-  color: var(--white);
-  font-family: "full";
-  letter-spacing: 2px;
-  font-size: 20px;
+      color: var(--white);
+      font-family: "full";
+      letter-spacing: 2px;
+      font-size: 20px;
 }
 #contact img {
-  width: 50px;
-  filter: invert(0.75);
+      width: 25px;
+      filter: invert(0.75);
 }
 .links_container {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: center;
-  justify-content: space-evenly;
-}
-#contact .links:nth-child(1) {
-  height: 25vh;
-  width: 25%;
-  display: flex;
-  flex-flow: column wrap;
-  align-items: end;
-  justify-content: space-between;
-  margin-bottom: 5em;
-}
-#contact .links:nth-child(2) {
-  height: 25vh;
-  width: 25%;
-  display: flex;
-  flex-flow: column wrap;
-  text-align: center;
-  margin-bottom: 5em;
-}
-.links span {
-  width: 200px;
-  height: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+      display: flex;
+      flex-flow: row wrap;
+      align-items: center;
+      justify-content: space-evenly;
+
+      & .links {
+            width: 25%;
+            height: 100%;
+            display: flex;
+            flex-flow: column wrap;
+            align-items: flex-end;
+            justify-content: space-between;
+
+            & span {
+                  width: 200px;
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+            }
+      }
 }
 #contact a {
-  color: var(--white);
-  font-size: 20px;
+      color: var(--white);
+      font-size: 20px;
+      flex: 1;
 }
 #contact .links:nth-child(2) a {
-  font-style: italic;
+      font-style: italic;
 }
