--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
       scroll-behavior: smooth;
 }
 
-.App-header {
+header {
       background: url(./assets/studio.jpg) no-repeat center/cover;
       background-attachment: fixed;
       height: 100vh;
@@ -23,25 +23,26 @@
       align-items: center;
       justify-content: center;
       color: var(--white);
+
+      & h2 {
+            position: relative;
+            font-family: "Reenie Beanie", cursive;
+            background: transparent;
+            color: var(--white);
+      }
 }
 h1 {
       font-family: "outlined";
       font-size: 6vw;
       margin: 0;
-}
-h1 span {
-      font-family: "full";
-      color: var(--blue);
-}
-.App header h2 {
-      position: relative;
-      font-family: "Reenie Beanie", cursive;
-      background: transparent;
-      color: var(--white);
+
+      & span {
+            font-family: "full";
+            color: var(--blue);
+      }
 }
 
 /* Navigation style */
-
 .nav-toggler {
       position: fixed;
       z-index: 20;
@@ -56,22 +57,24 @@ h1 span {
       align-items: center;
       justify-content: center;
       background: transparent;
-}
-.line {
-      position: absolute;
-      display: block;
-      width: 100%;
-      height: 2px;
-      border-radius: 50px;
-      background: transparent;
-      backdrop-filter: invert(1);
-      transition: transform 0.3s ease-out, opacity 0.1s ease-out;
-}
-.l1 {
-      transform: translateY(-10px);
-}
-.l3 {
-      transform: translateY(10px);
+
+      & .line {
+            position: absolute;
+            display: block;
+            width: 100%;
+            height: 2px;
+            border-radius: 50px;
+            background: transparent;
+            backdrop-filter: invert(1);
+            transition: transform 0.3s ease-out, opacity 0.1s ease-out;
+      }
+
+      & .l1 {
+            transform: translateY(-10px);
+      }
+      & .l3 {
+            transform: translateY(10px);
+      }
 }
 .nav-toggler.toggle {
       position: fixed;
@@ -85,7 +88,6 @@ h1 span {
 .nav-toggler.toggle .l3 {
       transform: translateY(0) rotate(-135deg);
 }
-
 #navigation {
       position: fixed;
       width: 100%;
@@ -96,72 +98,85 @@ h1 span {
       z-index: 5;
 
       padding: 0;
-}
-#navigation nav {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      align-items: center;
 
-      margin: 0;
-      padding: 0;
-}
-#navigation nav ul {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-flow: column nowrap;
+      & nav {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            align-items: center;
 
-      margin: 0;
-      padding: 0;
-}
-#navigation nav ul li {
-      height: 100%;
-      width: 100%;
-      list-style-type: none;
-      transition: 0.4s;
-      display: flex;
-      align-items: center;
+            margin: 0;
+            padding: 0;
 
-      background: linear-gradient(-135deg, var(--white) 50%, #fff 0)
-                  var(--_d, 100%) / 250% no-repeat,
-            linear-gradient(-135deg, #0000 50%, var(--white) 0) var(--_d, 100%) /
-                  250% no-repeat;
-      -webkit-background-clip: text, padding-box;
-      background-clip: text, padding-box;
-      transition: 0.5s;
+            & ul {
+                  width: 100%;
+                  height: 100%;
+                  display: flex;
+                  flex-flow: column nowrap;
 
-      margin: 0;
-      padding: 0 1em;
-}
-#navigation a {
-      font-family: "outlined";
-      color: var(--white);
-      width: 100%;
-      height: 100%;
-      font-size: 2.5em;
-      display: flex;
-      align-items: center;
-      text-decoration: none;
-      transition: 0.4s;
+                  margin: 0;
+                  padding: 0;
 
-      margin: 0;
-      padding: 0;
-}
-#navigation li:hover {
-      cursor: pointer;
-      --_d: 50%;
-}
-#navigation li:hover a {
-      font-family: "full";
-      color: var(--background);
+                  & li {
+                        height: 100%;
+                        width: 100%;
+                        list-style-type: none;
+                        transition: 0.4s;
+                        display: flex;
+                        align-items: center;
+
+                        background: linear-gradient(
+                                          -135deg,
+                                          var(--white) 50%,
+                                          #fff 0
+                                    )
+                                    var(--_d, 100%) / 250% no-repeat,
+                              linear-gradient(
+                                          -135deg,
+                                          #0000 50%,
+                                          var(--white) 0
+                                    )
+                                    var(--_d, 100%) / 250% no-repeat;
+                        -webkit-background-clip: text, padding-box;
+                        background-clip: text, padding-box;
+                        transition: 0.5s;
+
+                        margin: 0;
+                        padding: 0 1em;
+
+                        & a {
+                              font-family: "outlined";
+                              color: var(--white);
+                              width: 100%;
+                              height: 100%;
+                              font-size: 2.5em;
+                              display: flex;
+                              align-items: center;
+                              text-decoration: none;
+                              transition: 0.4s;
+
+                              margin: 0;
+                              padding: 0;
+                        }
+
+                        &:hover {
+                              cursor: pointer;
+                              --_d: 50%;
+                        }
+
+                        &:hover a {
+                              font-family: "full";
+                              color: var(--background);
+                        }
+                  }
+            }
+      }
 }
 #navigation.active {
       margin-top: 0;
 }
 
 /* Clips */
-
 #clips {
       width: 100%;
       height: 100vh;
@@ -190,13 +205,13 @@ iframe {
       border: none;
       box-shadow: var(--shadow);
       transition: 0.5s;
-}
-iframe:hover {
-      transform: scale(1.03);
+
+      &:hover {
+            transform: scale(1.03);
+      }
 }
 
 /* Stream */
-
 #stream {
       margin: 2em 0;
       height: 70vh;
@@ -322,61 +337,65 @@ iframe:hover {
 }
 
 /* Shows */
-
 #show {
       margin: 2em 0;
       height: auto;
-}
-#show table {
-      margin: 0 auto;
-      border: 2px solid var(--background);
-      width: 75%;
-      height: auto;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      font-size: 20px;
-      color: var(--background);
-      border-radius: 15px;
-}
-#show table th {
-      border-bottom: 2px solid var(--background);
-      height: 70px;
-      font-size: 25px;
-}
-#show table tr td {
-      text-align: center;
-      height: 50px;
-      font-style: italic;
-}
-#show table a {
-      color: var(--background);
-      border-bottom: 1px solid var(--background);
+
+      & table {
+            margin: 0 auto;
+            border: 2px solid var(--background);
+            width: 75%;
+            height: auto;
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 20px;
+            color: var(--background);
+            border-radius: 15px;
+
+            & th {
+                  border-bottom: 2px solid var(--background);
+                  height: 70px;
+                  font-size: 25px;
+            }
+
+            & tr td {
+                  text-align: center;
+                  height: 50px;
+                  font-style: italic;
+            }
+
+            & a {
+                  color: var(--background);
+                  border-bottom: 1px solid var(--background);
+            }
+      }
 }
 
 /* Shop */
-
 #shop {
       height: 100vh;
       display: flex;
       align-items: center;
       justify-content: space-evenly;
       flex-flow: row wrap;
-}
-.item {
-      width: 25%;
-      height: auto;
-      text-align: center;
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-.item img {
-      width: 500px;
-      transition: 0.5s;
-}
-.item img:hover {
-      transform: scale(1.1);
+
+      & .item {
+            width: 25%;
+            height: auto;
+            text-align: center;
+            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+
+            & img {
+                  width: 500px;
+                  transition: 0.5s;
+
+                  &:hover {
+                        transform: scale(1.1);
+                  }
+            }
+      }
 }
 
 /* contact */
-
 #contact {
       position: relative;
       height: 25vh;
@@ -385,52 +404,57 @@ iframe:hover {
       flex-direction: row;
       justify-content: space-between;
       background: var(--background);
-}
-#contact h2 {
-      width: 50%;
-      padding-top: 0;
-      width: fit-content;
-      background: var(--background);
-      color: var(--white);
-}
-#contact h3 {
-      color: var(--white);
-      font-family: "full";
-      letter-spacing: 1px;
-      font-size: 20px;
-}
-#contact img {
-      width: 25px;
-      filter: invert(0.75);
-}
-.links_container {
-      width: 50%;
-      height: 100%;
-      padding-right: 25px;
-      display: flex;
-      flex-flow: row wrap;
-      align-items: center;
-      justify-content: space-between;
 
-      & .links {
+      & h2 {
+            width: 50%;
+            padding-top: 0;
+            width: fit-content;
+            background: var(--background);
+            color: var(--white);
+      }
+
+      & h3 {
+            color: var(--white);
+            font-family: "full";
+            letter-spacing: 1px;
+            font-size: 20px;
+      }
+
+      & img {
+            width: 25px;
+            filter: invert(0.75);
+      }
+
+      & .links_container {
+            width: 50%;
             height: 100%;
+            padding-right: 25px;
             display: flex;
-            flex-flow: column wrap;
-            align-items: flex-end;
-            justify-content: space-evenly;
+            flex-flow: row wrap;
+            align-items: center;
+            justify-content: space-between;
 
-            & span {
-                  width: 200px;
+            & .links {
+                  height: 100%;
                   display: flex;
-                  align-items: center;
-                  justify-content: space-between;
+                  flex-flow: column wrap;
+                  align-items: flex-end;
+                  justify-content: space-evenly;
+
+                  & span {
+                        width: 200px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                  }
             }
       }
-}
-#contact a {
-      color: var(--white);
-      font-size: 20px;
-      flex: 1;
+
+      & a {
+            color: var(--white);
+            font-size: 20px;
+            flex: 1;
+      }
 }
 #contact .links:nth-child(2) a {
       font-style: italic;
